@@ -47,7 +47,7 @@ import org.gjt.sp.util.Log;
 /**
  * The main class of the jEdit text editor.
  * @author Slava Pestov
- * @version $Id: jEdit.java,v 1.234 2004/07/17 06:29:17 spestov Exp $
+ * @version $Id: jEdit.java,v 1.235 2004/08/11 07:48:00 spestov Exp $
  */
 public class jEdit
 {
@@ -68,7 +68,7 @@ public class jEdit
 	public static String getBuild()
 	{
 		// (major).(minor).(<99 = preX, 99 = final).(bug fix)
-		return "04.02.15.00";
+		return "04.02.16.00";
 	} //}}}
 
 	//{{{ main() method
